--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: aquamarine;
+  background-color: rgb(224, 245, 104);
 }
 #agecal {
   color: black;
@@ -18,6 +18,8 @@ body {
 .container {
   width: 40%;
   min-width: 450px;
+  border-radius: 5px;
+  background-color: rgb(132, 138, 64);
   position: absolute;
   transform: translate(-50%, -50%);
   left: 50%;
@@ -30,11 +32,16 @@ body {
   outline: none;
 }
 .inputs-wrapper {
-  background-color: blue;
+  background-color: rgb(37, 37, 65);
   padding: 30px 25px;
   border-radius: 10px;
   box-shadow: 0 15px 20px rgba(0, 0, 0, 3);
   margin-bottom: 50px;
+}
+.heading {
+  color: white;
+  font-weight: bold;
+  padding: 5px;
 }
 input,
 button {
